Added specreader.py (python wrapper around mfile-root); added installation to lib to C Makefiles

--- a/src/gspec/Makefile
+++ b/src/gspec/Makefile
@@ -12,6 +12,7 @@ HEADERS= $(EXPHEADERS) GSPainter.h
 OBJ= $(SOURCES:.cxx=.o)
 DESTDIR = ../../lib
 
+.PHONY: all build copy clean
 
 all: build copy
 
