--- a/src/gspec/Makefile
+++ b/src/gspec/Makefile
@@ -6,8 +6,8 @@ CC=gcc
 ROOTCINT=rootcint
 CFLAGS=$(shell root-config --cflags)
 LFLAGS=$(shell root-config --glibs)
-SOURCES= GSDisplaySpec.cxx GSDisplayFunc.cxx GSDisplayObj.cxx GSViewport.cxx GSViewer.cxx GSPainter.cxx GSMarker.cxx GSXMarker.cxx GSYMarker.cxx GSCalibration.cxx GSFitter.cxx MTView.cxx MTViewer.cxx
-EXPHEADERS= GSViewer.h GSViewport.h GSDisplaySpec.h GSDisplayFunc.h GSDisplayObj.h GSMarker.h GSXMarker.h GSYMarker.h GSCalibration.h GSFitter.h MTView.h MTViewer.h
+SOURCES= GSDisplaySpec.cxx GSDisplayFunc.cxx GSDisplayObj.cxx GSViewport.cxx GSViewer.cxx GSPainter.cxx GSMarker.cxx GSXMarker.cxx GSYMarker.cxx GSCalibration.cxx GSFitter.cxx GSEEFitter.cxx MTView.cxx MTViewer.cxx
+EXPHEADERS= GSViewer.h GSViewport.h GSDisplaySpec.h GSDisplayFunc.h GSDisplayObj.h GSMarker.h GSXMarker.h GSYMarker.h GSCalibration.h GSFitter.h GSEEFitter.h MTView.h MTViewer.h
 HEADERS= $(EXPHEADERS) GSPainter.h
 OBJ= $(SOURCES:.cxx=.o)
 DESTDIR = ../../lib
