Next generation fitter (work in progress) Begin introduction of namespaces

--- a/src/gspec/Makefile
+++ b/src/gspec/Makefile
@@ -1,14 +1,13 @@
-# Makefile for gSpec
-#
+# Makefile for HDTV::Display
 
 CPP=g++
 CC=gcc
 ROOTCINT=rootcint
 CFLAGS=$(shell root-config --cflags)
 LFLAGS=$(shell root-config --glibs)
-SOURCES= GSDisplaySpec.cxx GSDisplayFunc.cxx GSDisplayObj.cxx GSViewport.cxx GSViewer.cxx GSPainter.cxx GSMarker.cxx GSXMarker.cxx GSYMarker.cxx GSCalibration.cxx GSFitter.cxx MTView.cxx MTViewer.cxx
-EXPHEADERS= GSViewer.h GSViewport.h GSDisplaySpec.h GSDisplayFunc.h GSDisplayObj.h GSMarker.h GSXMarker.h GSYMarker.h GSCalibration.h GSFitter.h MTView.h MTViewer.h
-HEADERS= $(EXPHEADERS) GSPainter.h
+SOURCES= GSDisplaySpec.cxx GSDisplayFunc.cxx GSDisplayObj.cxx GSViewport.cxx GSViewer.cxx Painter.cxx GSMarker.cxx GSXMarker.cxx GSYMarker.cxx GSCalibration.cxx View.cxx View2D.cxx MTViewer.cxx
+EXPHEADERS= GSDisplaySpec.h GSDisplayFunc.h GSDisplayObj.h GSMarker.h GSXMarker.h GSYMarker.h GSCalibration.h  View2D.h GSViewport.h View.h MTViewer.h GSViewer.h
+HEADERS= $(EXPHEADERS) Painter.h
 OBJ= $(SOURCES:.cxx=.o)
 DESTDIR = ../../lib
 
@@ -21,8 +20,8 @@ build: gspec.so
 gspec.so: $(OBJ) gsdict.o Makefile
 	$(CPP) -fpic $(CFLAGS) $(LFLAGS) -shared -o gspec.so $(OBJ) gsdict.o
 
-gsdict.cxx:  Makefile $(EXPHEADERS)
-	$(ROOTCINT) -f gsdict.cxx -c $(EXPHEADERS)
+gsdict.cxx:  Makefile $(EXPHEADERS) LinkDef.h
+	$(ROOTCINT) -f gsdict.cxx -c $(EXPHEADERS) LinkDef.h
 
 %.o: %.cxx $(HEADERS) Makefile
 	$(CPP) $(CFLAGS) -fpic -c $<
