Renamed gSpec to display Cleaned up Makefiles Removed obsolete files Use dlmgr directly to load display component from Python scripts

--- a/src/Makefile
+++ b/src/Makefile
@@ -3,7 +3,7 @@
 # WARNING: Recursive MAKEs can go very wrong if the different modules depend on each other.
 # This is not the case here, the modules are completely independent. If two modules depend
 # on each other, they should be built by a single Makefile.
-MODULES= corr gspec mfile-root
+MODULES= corr display fit mfile-root
 
 .PHONY: all clean $(MODULES)
 
@@ -11,14 +11,18 @@ all: $(MODULES)
 
 clean:
 	$(MAKE) -C corr clean
-	$(MAKE) -C gspec clean
+	$(MAKE) -C display clean
+	$(MAKE) -C fit clean
 	$(MAKE) -C mfile-root clean
 
 corr:
 	$(MAKE) -C corr
 
-gspec:
-	$(MAKE) -C gspec
+display:
+	$(MAKE) -C display
+	
+fit:
+	$(MAKE) -C fit
 	
 mfile-root:
 	$(MAKE) -C mfile-root
