* Major changes to display component API * Changes to fit component API (WIP) * Display decomposition of fit * Include steps in background * Changed colors of fit functions to approximately match TV
Note: peak model ee does not work at the moment

--- a/src/display/Makefile
+++ b/src/display/Makefile
@@ -1,11 +1,11 @@
 # Makefile for HDTV::Display
 
-CPP=g++
-CC=gcc
+CPP=g++ -g
+CC=gcc -g
 ROOTCINT=rootcint
 CFLAGS=$(shell root-config --cflags)
 LFLAGS=$(shell root-config --glibs)
-SOURCES= DisplaySpec.cxx DisplayFunc.cxx DisplayObj.cxx Viewer.cxx Painter.cxx Marker.cxx XMarker.cxx YMarker.cxx Calibration.cxx View.cxx View1D.cxx View2D.cxx MTViewer.cxx
+SOURCES= DisplaySpec.cxx DisplayFunc.cxx DisplayObj.cxx DisplayStack.cxx Viewer.cxx Painter.cxx Marker.cxx XMarker.cxx YMarker.cxx Calibration.cxx View.cxx View1D.cxx View2D.cxx MTViewer.cxx
 # The ordering matters here: rootcint will complain on (some) different orderings.
 # The reason for this is unclear.
 EXPHEADERS= Calibration.h View.h View1D.h View2D.h MTViewer.h Viewer.h DisplaySpec.h DisplayFunc.h DisplayObj.h Marker.h XMarker.h YMarker.h
