changed stuff in order to make a system wide install possible * changed hdtv script to search for additional plugins and startup   script in ~/.hdtv * module search path is adjusted to include hdtv dir if hdtv is started   from source dir (files in source dir should be prefered before system   files) * moved plugins dir and lib dir inside hdtv dir (the hdtv dir is   then installed in the system's default location for python packages) * renamed apps dir to bin * wrote a first version of setup.py

--- a/src/comca/Makefile
+++ b/src/comca/Makefile
@@ -9,7 +9,7 @@ LFLAGS=$(shell root-config --glibs) -L/ikpv2/lib -lcomca
 SOURCES= CoMCA.cxx
 HEADERS= CoMCA.h
 OBJ= $(SOURCES:.cxx=.o)
-DESTDIR= ../../lib
+DESTDIR= ../../hdtv/lib
 MODNAME= comca-root
 
 .PHONY: all build copy clean
