* Added ROOT TH2-backed VMatrix (for cutting/projection in ROOT TH2   histograms) * Added support for multiple positive-counting cut regions to GUI   (hotkey: ,c)
NOTE: the distribution of the code to the different modules/plugins
probably needs to be revisited.

--- a/src/mfile-root/Makefile
+++ b/src/mfile-root/Makefile
@@ -21,8 +21,8 @@ build: $(MODNAME).so
 $(MODNAME).so: $(OBJ) rootdict-$(MODNAME).o Makefile
 	$(CPP) -fpic $(CFLAGS) $(LFLAGS) -shared -o $(MODNAME).so $(OBJ) rootdict-$(MODNAME).o
 
-rootdict-$(MODNAME).cxx:  Makefile $(HEADERS)
-	$(ROOTCINT) -f rootdict-$(MODNAME).cxx -c $(INCL_PATH) $(HEADERS)
+rootdict-$(MODNAME).cxx:  Makefile $(HEADERS) LinkDef.h
+	$(ROOTCINT) -f rootdict-$(MODNAME).cxx -c $(INCL_PATH) $(HEADERS) LinkDef.h
 
 %.o: %.cxx $(HEADERS) Makefile
 	$(CPP) $(CFLAGS) -fpic -c $<
