Added C++ code for calculation of statistical moments (integral, mean, ...) of histograms and background.
The last commit of this code had many serious bugs and was reverted.

--- a/src/fit/Makefile
+++ b/src/fit/Makefile
@@ -1,8 +1,8 @@
 # Makefile for HDTV::Fit
 include ../Makefile.def
 
-SOURCES= PolyBg.cxx Param.cxx Fitter.cxx TheuerkaufFitter.cxx EEFitter.cxx Util.cxx
-EXPHEADERS= Background.h PolyBg.h Param.h Fitter.h TheuerkaufFitter.h EEFitter.h
+SOURCES= Integral.cxx PolyBg.cxx Param.cxx Fitter.cxx TheuerkaufFitter.cxx EEFitter.cxx Util.cxx
+EXPHEADERS= Integral.h Background.h PolyBg.h Param.h Fitter.h TheuerkaufFitter.h EEFitter.h
 HEADERS= $(EXPHEADERS)
 OBJ= $(SOURCES:.cxx=.o)
 MODNAME= fit
