--- a/src/mfile-root/Makefile
+++ b/src/mfile-root/Makefile
@@ -1,7 +1,7 @@
 # Makefile for mfile-root
 include ../Makefile.def
 
-LFLAGS+= -L/ikpv2/lib -lmfile
+LFLAGS+= -L$(PREFIX)/lib -lmfile
 SOURCES= MFileHist.cxx VMatrix.cxx
 HEADERS= MFileHist.h VMatrix.h
 OBJ= $(SOURCES:.cxx=.o)
@@ -17,7 +17,7 @@ $(MODNAME).so: $(OBJ) rootdict-$(MODNAME).o Makefile
 	$(CPP) -fpic $(CFLAGS) $(LFLAGS) -shared -o $(MODNAME).so $(OBJ) rootdict-$(MODNAME).o
 
 rootdict-$(MODNAME).cxx:  Makefile $(HEADERS) LinkDef.h
-	$(ROOTCINT) -f rootdict-$(MODNAME).cxx -c $(INCL_PATH) $(HEADERS) LinkDef.h
+	$(ROOTCINT) -f rootdict-$(MODNAME).cxx -c -I$(INCL_PATH) $(HEADERS) LinkDef.h
 
 %.o: %.cxx $(HEADERS) Makefile
 	$(CPP) $(CFLAGS) -fpic -c $<
