Added initial support for mfile-matrices

--- a/src/mfile-root/Makefile
+++ b/src/mfile-root/Makefile
@@ -2,9 +2,10 @@
 include ../Makefile.def
 
 LFLAGS+= -L$(PREFIX)/lib -lmfile
-SOURCES= MFileHist.cxx VMatrix.cxx
-HEADERS= MFileHist.h VMatrix.h
-OBJ= $(SOURCES:.cxx=.o)
+SOURCES= MFileHist.cxx VMatrix.cxx MatOp.cxx MFile.cxx \
+    matop/matop_adjust.c matop/matop_conv.c matop/matop_project.c
+HEADERS= MFileHist.h VMatrix.h MatOp.h
+OBJ= $(patsubst %.cxx,%.o,$(patsubst %.c,%.o, $(SOURCES)))
 MODNAME= mfile-root
 
 .PHONY: all build copy clean
@@ -19,9 +20,12 @@ $(MODNAME).so: $(OBJ) rootdict-$(MODNAME).o Makefile
 rootdict-$(MODNAME).cxx:  Makefile $(HEADERS) LinkDef.h
 	$(ROOTCINT) -f rootdict-$(MODNAME).cxx -c -I$(INCL_PATH) $(HEADERS) LinkDef.h
 
-%.o: %.cxx $(HEADERS) Makefile
-	$(CPP) $(CFLAGS) -fpic -c $<
-	
+%.o: %.cxx $(HEADERS) MFile.h Makefile
+	$(CPP) $(CFLAGS) -fpic -c -o $@ $<
+
+%.o: %.c $(HEADERS) MFile.h Makefile
+	$(CPP) $(CFLAGS) -fpic -c -o $@ $<
+
 clean:
 	-/bin/rm -f rootdict-$(MODNAME).cxx rootdict-$(MODNAME).h rootdict-$(MODNAME).o
 	-/bin/rm -f *~
