Changed calInterface.py to get cal pos assign running.
Changed MFile.cxx to make cast from const char * to char * to stop compile warning / error.

Changed Makefile(s) to avoid bug in gcc 4.6.1

--- a/src/comca/Makefile
+++ b/src/comca/Makefile
@@ -13,7 +13,7 @@ all: build copy
 build: $(MODNAME).so
 
 $(MODNAME).so: $(OBJ) rootdict-$(MODNAME).o Makefile
-	$(CPP) -fpic $(CFLAGS) $(LFLAGS) -shared -o $(MODNAME).so $(OBJ) rootdict-$(MODNAME).o
+	$(CPP) -fpic $(CFLAGS) -shared -o $(MODNAME).so $(OBJ) rootdict-$(MODNAME).o $(LFLAGS)
 
 rootdict-$(MODNAME).cxx:  Makefile $(HEADERS)
 	$(ROOTCINT) -f rootdict-$(MODNAME).cxx -c -I$(INCL_PATH) $(HEADERS)
