--- a/src/mfile-root/Makefile
+++ b/src/mfile-root/Makefile
@@ -15,7 +15,7 @@ all: build copy
 build: $(MODNAME).so
 
 $(MODNAME).so: $(OBJ) rootdict-$(MODNAME).o Makefile
-	$(CPP) -fpic $(CFLAGS) $(LFLAGS) -shared -o $(MODNAME).so $(OBJ) rootdict-$(MODNAME).o
+	$(CPP) -fpic $(CFLAGS) -shared -o $(MODNAME).so $(OBJ) rootdict-$(MODNAME).o $(LFLAGS) 
 
 rootdict-$(MODNAME).cxx:  Makefile $(HEADERS) LinkDef.h
 	$(ROOTCINT) -f rootdict-$(MODNAME).cxx -c -I$(INCL_PATH) $(HEADERS) LinkDef.h
