Added missing mkdir to makefiles

--- a/src/mfile-root/Makefile
+++ b/src/mfile-root/Makefile
@@ -34,4 +34,5 @@ clean:
 copy: $(DESTDIR)/$(MODNAME).so
 
 $(DESTDIR)/$(MODNAME).so: $(MODNAME).so
+	mkdir -p $(DESTDIR)
 	cp $(MODNAME).so $(DESTDIR)
