--- a/src/Makefile.def
+++ b/src/Makefile.def
@@ -8,4 +8,4 @@ INCL_PATH=$(PREFIX)/include
 LIB_PATH=$(PREFIX)/lib
 CFLAGS=$(shell root-config --cflags) -I$(INCL_PATH) -Wall -g
 LFLAGS=$(shell root-config --glibs) -L$(LIB_PATH)
-DESTDIR=../../hdtv/clib
+DESTDIR=../../hdtv/clib/
