--- a/src/comca/Makefile
+++ b/src/comca/Makefile
@@ -29,4 +29,5 @@ clean:
 copy: $(DESTDIR)/$(MODNAME).so
 
 $(DESTDIR)/$(MODNAME).so: $(MODNAME).so
+	mkdir -p $(DESTDIR)
 	cp $(MODNAME).so $(DESTDIR)
