--- a/src/display/Makefile
+++ b/src/display/Makefile
@@ -32,4 +32,5 @@ clean:
 copy: $(DESTDIR)/$(MODNAME).so
 
 $(DESTDIR)/$(MODNAME).so: $(MODNAME).so
+	mkdir -p $(DESTDIR)
 	cp $(MODNAME).so $(DESTDIR)
