--- a/src/mfile-root/Makefile
+++ b/src/mfile-root/Makefile
@@ -27,7 +27,7 @@ rootdict-$(MODNAME).cxx:  Makefile $(HEADERS) LinkDef.h
 	$(CPP) $(CFLAGS) -fpic -c -o $@ $<
 
 clean:
-	-/bin/rm -f rootdict-$(MODNAME).cxx rootdict-$(MODNAME).h rootdict-$(MODNAME).o
+	-/bin/rm -f rootdict-$(MODNAME).cxx rootdict-$(MODNAME).h rootdict-$(MODNAME).o rootdict-$(MODNAME)_rdict.pcm
 	-/bin/rm -f *~
 	-/bin/rm -f $(OBJ)
 
@@ -36,3 +36,4 @@ copy: $(DESTDIR)/$(MODNAME).so
 $(DESTDIR)/$(MODNAME).so: $(MODNAME).so
 	mkdir -p $(DESTDIR)
 	cp $(MODNAME).so $(DESTDIR)
+	cp rootdict-$(MODNAME)_rdict.pcm $(DESTDIR)
