--- a/src/display/Makefile
+++ b/src/display/Makefile
@@ -2,7 +2,7 @@
 include ../Makefile.def
 
 SOURCES= DisplaySpec.cxx DisplayFunc.cxx DisplayBlock.cxx DisplayObj.cxx DisplayStack.cxx DisplayCut.cxx Viewer.cxx Painter.cxx Marker.cxx XMarker.cxx YMarker.cxx Calibration.cxx View.cxx View1D.cxx View2D.cxx MTViewer.cxx
-# The ordering matters here: rootcint will complain on (some) different orderings.
+# The ordering matters here: rootcling will complain on (some) different orderings.
 # The reason for this is unclear.
 EXPHEADERS= Calibration.h View.h View1D.h View2D.h MTViewer.h Viewer.h DisplaySpec.h DisplayFunc.h DisplayBlock.h DisplayObj.h DisplayCut.h Marker.h XMarker.h YMarker.h
 HEADERS= $(EXPHEADERS) Painter.h
@@ -19,7 +19,7 @@ $(MODNAME).so: $(OBJ) rootdict-$(MODNAME).o Makefile
 	$(CPP) -fpic $(CFLAGS) -shared -o $(MODNAME).so $(OBJ) rootdict-$(MODNAME).o $(LFLAGS) 
 
 rootdict-$(MODNAME).cxx:  Makefile $(EXPHEADERS) LinkDef.h
-	$(ROOTCINT) -f rootdict-$(MODNAME).cxx -c $(EXPHEADERS) LinkDef.h
+	$(ROOTCLING) -f rootdict-$(MODNAME).cxx $(EXPHEADERS) LinkDef.h
 
 %.o: %.cxx $(HEADERS) Makefile
 	$(CPP) $(CFLAGS) -fpic -c $<
