--- a/hdtv/rootext/display/Makefile
+++ b/hdtv/rootext/display/Makefile
@@ -1,35 +1,31 @@
 # Makefile for HDTV::Display
-MODNAME = display
+MODNAME := display
 
-SOURCES= DisplaySpec.cxx DisplayFunc.cxx DisplayBlock.cxx DisplayObj.cxx DisplayStack.cxx DisplayCut.cxx Viewer.cxx Painter.cxx Marker.cxx XMarker.cxx YMarker.cxx Calibration.cxx View.cxx View1D.cxx View2D.cxx MTViewer.cxx
-HEADERS= Calibration.h View.h View1D.h View2D.h MTViewer.h Viewer.h DisplaySpec.h DisplayFunc.h DisplayBlock.h DisplayObj.h DisplayCut.h Marker.h XMarker.h YMarker.h Painter.h
-OBJ= $(SOURCES:.cxx=.o)
+SRC_FILES := $(wildcard *.cxx)
+HDR_FILES := $(SRC_FILES:.cxx=.h)
+OBJ_FILES := $(SRC_FILES:.cxx=.o)
 
-CPP = g++
-ROOTCLING = rootcling
-CFLAGS += $(shell root-config --cflags) -Wall -g -O2 -fPIC
+CPP := g++
+ROOTCLING := rootcling
+CXXFLAGS += $(shell root-config --cflags) -Wall -g -O2 -fPIC -MMD
 LFLAGS += $(shell root-config --glibs)
 
 .PHONY: all build clean
 
 all: build
 
-build: $(MODNAME).so
+build: lib$(MODNAME).so
 
-$(MODNAME).so: $(OBJ) rootdict-$(MODNAME).o
-	$(CPP) $(CFLAGS) -shared -o $(MODNAME).so $(OBJ) rootdict-$(MODNAME).o $(LFLAGS)
+lib$(MODNAME).so: $(OBJ_FILES) $(MODNAME)_rdict.o
+	$(CPP) $(CXXFLAGS) -shared -o lib$(MODNAME).so $(OBJ_FILES) $(MODNAME)_rdict.o $(LFLAGS)
 
-rootdict-$(MODNAME).cxx: $(HEADERS) LinkDef.h
-	$(ROOTCLING) -f rootdict-$(MODNAME).cxx -inlineInputHeader $(HEADERS) LinkDef.h
+$(MODNAME)_rdict.cxx: $(HDR_FILES) LinkDef.h
+	$(ROOTCLING) -f $(MODNAME)_rdict.cxx -noIncludePaths -inlineInputHeader -s lib$(MODNAME).so -rml lib$(MODNAME).so -rmf lib$(MODNAME).rootmap $(HDR_FILES) LinkDef.h
 
-%.o: %.cxx $(HEADERS)
-	$(CPP) $(CFLAGS) -c -o $@ $<
-
-%.o: %.c $(HEADERS)
-	$(CPP) $(CFLAGS) -c -o $@ $<
+%.o: %.cxx $(HDR_FILES)
+	$(CPP) $(CXXFLAGS) -c -o $@ $<
 
 clean:
-	-/bin/rm -f rootdict-$(MODNAME).cxx rootdict-$(MODNAME).h rootdict-$(MODNAME).o rootdict-$(MODNAME)_rdict.pcm
-	-/bin/rm -f *~
-	-/bin/rm -f $(OBJ)
-	-/bin/rm -f *.so
+	-/bin/rm -f *.o */*.o *.so *.d *.pcm *.rootmap *_rdict.*
+
+-include $(OBJ_FILES:.o=.d)
