Fixed libfit not working and some tests

--- a/hdtv/rootext/fit/Makefile
+++ b/hdtv/rootext/fit/Makefile
@@ -1,8 +1,8 @@
 # Makefile for HDTV::Fit
 MODNAME := fit
 
-SRC_FILES := $(wildcard *.cxx)
-HDR_FILES := $(SRC_FILES:.cxx=.h)
+SRC_FILES := Integral.cxx PolyBg.cxx Param.cxx Fitter.cxx TheuerkaufFitter.cxx EEFitter.cxx Util.cxx
+HDR_FILES := Integral.h Background.h PolyBg.h Param.h Fitter.h TheuerkaufFitter.h EEFitter.h Util.h
 OBJ_FILES := $(SRC_FILES:.cxx=.o)
 
 CPP := g++
@@ -20,7 +20,8 @@ lib$(MODNAME).so: $(OBJ_FILES) $(MODNAME)_rdict.o
 	$(CPP) $(CXXFLAGS) -shared -o lib$(MODNAME).so $(OBJ_FILES) $(MODNAME)_rdict.o $(LFLAGS)
 
 $(MODNAME)_rdict.cxx: $(HDR_FILES) LinkDef.h
-	$(ROOTCLING) -f $(MODNAME)_rdict.cxx -noIncludePaths -inlineInputHeader -s lib$(MODNAME).so -rml lib$(MODNAME).so -rmf lib$(MODNAME).rootmap $(HDR_FILES) LinkDef.h
+	# Fixme: -rml lib$(MODNAME).so breaks ROOT.HDTV.Fit.PolyBg(self.bgdeg)
+	$(ROOTCLING) -f $(MODNAME)_rdict.cxx -noIncludePaths -inlineInputHeader -s lib$(MODNAME).so -rmf $(MODNAME).rootmap $(HDR_FILES) LinkDef.h
 
 %.o: %.cxx $(HDR_FILES)
 	$(CPP) $(CXXFLAGS) -c -o $@ $<
