--- a/hdtv/rootext/display/Makefile
+++ b/hdtv/rootext/display/Makefile
@@ -20,7 +20,8 @@ lib$(MODNAME).so: $(OBJ_FILES) $(MODNAME)_rdict.o
 	$(CPP) $(CXXFLAGS) -shared -o lib$(MODNAME).so $(OBJ_FILES) $(MODNAME)_rdict.o $(LFLAGS)
 
 $(MODNAME)_rdict.cxx: $(HDR_FILES) LinkDef.h
-	$(ROOTCLING) -f $(MODNAME)_rdict.cxx -noIncludePaths -inlineInputHeader -s lib$(MODNAME).so -rml lib$(MODNAME).so -rmf lib$(MODNAME).rootmap $(HDR_FILES) LinkDef.h
+	# Removed -rml lib$(MODNAME).so as a precaution, failed in fit
+	$(ROOTCLING) -f $(MODNAME)_rdict.cxx -noIncludePaths -inlineInputHeader -s lib$(MODNAME).so -rmf lib$(MODNAME).rootmap $(HDR_FILES) LinkDef.h
 
 %.o: %.cxx $(HDR_FILES)
 	$(CPP) $(CXXFLAGS) -c -o $@ $<
