Use root-config --cxx to choose compiler Rename Mfile.h to MFileRoot.h to avoid clash with libmifle's mfile.h Add libX11 to display Makefile See Issue #21

--- a/hdtv/rootext/display/Makefile
+++ b/hdtv/rootext/display/Makefile
@@ -5,10 +5,10 @@ SRC_FILES := Calibration.cxx DisplayBlock.cxx DisplayCut.cxx DisplayFunc.cxx Dis
 HDR_FILES := $(SRC_FILES:.cxx=.h)
 OBJ_FILES := $(SRC_FILES:.cxx=.o)
 
-CPP := g++
+CPP := $(shell root-config --cxx)
 ROOTCLING := rootcling
 CXXFLAGS += $(shell root-config --cflags) -Wall -g -O2 -fPIC -MMD
-LFLAGS += $(shell root-config --glibs)
+LFLAGS += $(shell root-config --glibs) -lX11
 
 .PHONY: all build clean
 
